RESOLVED FIXED118509
[GTK] WebKitTestRunner tries to remove an already deleted event in EventSenderProxy::replaySavedEvents
https://bugs.webkit.org/show_bug.cgi?id=118509
Summary [GTK] WebKitTestRunner tries to remove an already deleted event in EventSende...
Simon Pena
Reported 2013-07-09 09:08:57 PDT
[GTK] WebKitTestRunner tries to remove an already deleted event in EventSenderProxy::replaySavedEvents
Attachments
Patch (2.74 KB, patch)
2013-07-09 09:14 PDT, Simon Pena
no flags
Simon Pena
Comment 1 2013-07-09 09:14:08 PDT
Martin Robinson
Comment 2 2013-07-09 09:28:55 PDT
Comment on attachment 206327 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=206327&action=review > Tools/ChangeLog:14 > + fast/events/mousedown-inside-dragstart-should-not-cause-crash.html no longer > + crashes after this fix is added. This patch isn't removing it from the TestExpectations file though?
Simon Pena
Comment 3 2013-07-09 09:36:47 PDT
(In reply to comment #2) > This patch isn't removing it from the TestExpectations file though? No, it isn't. The GTK-WK2 buildbot is a bit red these days, and this test has been failing probably forever (the flakiness dashboard doesn't have any records of it passing). I am (slowly) trying to improve the bots situation these days, maybe I should have started skipping them first, and then go on with fixes?
Simon Pena
Comment 4 2013-07-09 09:37:36 PDT
(In reply to comment #3) > (In reply to comment #2) > > This patch isn't removing it from the TestExpectations file though? > > No, it isn't. The GTK-WK2 buildbot is a bit red these days, and this test has been failing probably forever (the flakiness dashboard doesn't have any records of it passing). (The test wasn't skipped on GTK-WK1, it worked fine there)
Martin Robinson
Comment 5 2013-07-09 09:37:36 PDT
Comment on attachment 206327 [details] Patch It's fine to just fix it now. Thanks!
WebKit Commit Bot
Comment 6 2013-07-10 01:42:08 PDT
Comment on attachment 206327 [details] Patch Clearing flags on attachment: 206327 Committed r152530: <http://trac.webkit.org/changeset/152530>
WebKit Commit Bot
Comment 7 2013-07-10 01:42:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.