[GTK] WebKitTestRunner tries to remove an already deleted event in EventSenderProxy::replaySavedEvents https://bugs.webkit.org/show_bug.cgi?id=118509

Patch by Simon Pena <simon.pena@samsung.com> on 2013-07-10
Reviewed by Martin Robinson.

In EventSenderProxy::replaySavedEvents WebKitTestRunner can crash
when trying to remove an event already removed, if another event is
processed in the middle. By using a Deque's takeFirst, we ensure the
element is removed before we dispatch it.

fast/events/mousedown-inside-dragstart-should-not-cause-crash.html no longer
crashes after this fix is added.

* WebKitTestRunner/EventSenderProxy.h: Use a Deque instead of Vector in GTK
* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::EventSenderProxy::replaySavedEvents): Use takeFirst to retrieve the event
from the queue.

Canonical link: https://commits.webkit.org/136484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152530 268f45cc-cd09-0410-ab3c-d52691b4dbfc